Fix footer logo on mobile

--- a/saleor/static/scss/storefront/components/_footer.scss
+++ b/saleor/static/scss/storefront/components/_footer.scss
@@ -7,6 +7,12 @@
   }
   &__logo {
     margin-bottom: $global-margin;
+    @include media-breakpoint-down(md) {
+      height: 30px;
+    }
+    @include media-breakpoint-down(sm) {
+      height: 40px;
+    }
   }
   ul {
     list-style: none;
